# design-markets-parser

./: .gitignore  Makefile  Procfile  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 035d86485875_.py  0865797c0bab_.py  0da15022a0f9_.py  10f543d6a818_.py  118837730e47_.py  208beab88526_.py  249489a299ea_.py  26d270747ab9_.py  2d98ac3de267_.py  613c6d8b8a49_.py  af3af52ef48c_.py  c3dd7cd72b3c_.py  c71f61ca7567_.py  cc37155ccb6d_.py  d115eaa15de3_.py  e1a503a0d9e1_.py  ee36e5a2bc72_.py
pb_design_parsers/: __init__.py  browser.py  creative.py  db.py  db_tools.py  designcuts.py  envanto.py  fastapi.py  main.py  models.py  schemas.py  web.py  yellowimgs.py  youworkforthem.py
pb_design_parsers/api/: routes.py  service.py
pb_design_parsers/api/local_routes/: api.py
pb_design_parsers/templates/: _search_items_result.html  base.html  make_bundle.html  make_products.html  product_merge.html  products_list.html  upload_data.html  upload_data_manual.html
